crates/check_cli/tests/snapshots/main_commands_format/can_format_graphphs_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.graphqls`

```graphqls
scalar Time
scalar UUID

type User {
	id: UUID!
	name: String!
	updatedAt: Time!
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
