crates/check_cli/tests/snapshots/main_commands_format/does_not_format_if_files_are_listed_in_ignore_option.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "files": { "includes": ["**", "!test1.js"] },
  "formatter": { "includes": ["**", "!test2.js"] }
}
```

## `test1.js`

```js
  statement(  )  
```

## `test2.js`

```js
  statement(  )  
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test1.js
  - test2.js
  


```

# Emitted Messages

```block
Formatted 0 files in <TIME>. No fixes applied.
```
