crates/check_cli/tests/snapshots/main_commands_format/does_not_format_ignored_directories.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "formatter": {
    "includes": [
      "**",
      "!test1.js",
      "!test2.js",
      "!test3/**/*",
      "!/test4/**/*",
      "!test5/**/*",
      "!**/test6/*.js",
      "!**/*.test7.js"
    ]
  }
}
```

## `test.js`

```js
statement();

```

## `test.test7.js`

```js
  statement(  )  
```

## `test/test.test7.js`

```js
  statement(  )  
```

## `test1.js`

```js
  statement(  )  
```

## `test2.js`

```js
  statement(  )  
```

## `test3/test.js`

```js
  statement(  )  
```

## `test4/test.js`

```js
statement();

```

## `test5/test.js`

```js
  statement(  )  
```

## `test6/test.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 3 files in <TIME>. Fixed 3 files.
```
