crates/check_cli/tests/snapshots/main_commands_format/does_not_format_ignored_file_in_included_directory.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "formatter": {
    "includes": ["src/**", "!src/file2.js"]
  }
}
```

## `src/file1.js`

```js
statement();

```

## `src/file2.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
