crates/check_cli/tests/snapshots/main_commands_format/does_not_format_ignored_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{ "formatter": { "includes": ["**/*.js", "!test.js"] } }
```

## `test.js`

```js
  statement(  )  
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test.js
  


```

# Emitted Messages

```block
Formatted 0 files in <TIME>. No fixes applied.
```
