crates/check_cli/tests/snapshots/main_commands_format/don_t_format_ignored_known_jsonc_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": {
    "ignoreUnknown": true,
    "includes": ["**", "!.eslintrc"]
  }
}
```

## `.eslintrc`

```eslintrc
  statement(  )  
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
